--- a/average_score_model.ipynb
+++ b/average_score_model.ipynb
@@ -11,272 +11,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load the dataset to explore its structure and contents\u001b[39;00m\n\u001b[1;32m      2\u001b[0m mat_data_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstudent/student-mat.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m student_mat_data \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(mat_data_path, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      5\u001b[0m por_data_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstudent/student-por.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      6\u001b[0m student_por_data \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(por_data_path, delimiter\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m;\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Load the dataset to explore its structure and contents\n",
-    "mat_data_path = \"student/student-mat.csv\"\n",
-    "student_mat_data = pd.read_csv(mat_data_path, delimiter=';')\n",
-    "\n",
-    "por_data_path = \"student/student-por.csv\"\n",
-    "student_por_data = pd.read_csv(por_data_path, delimiter=';')\n",
-    "\n",
-    "combined_data = pd.concat([student_mat_data, student_por_data], ignore_index=True)\n",
-    "\n",
-    "combined_data.head(), combined_data.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prediction on G3(Final Year Grade)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Root Mean Squared Error:  5.607307011948271\n",
-      "R-squared:  -0.13965947376433285\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestRegressor\n",
-    "import numpy as np\n",
-    "\n",
-    "# Selecting features and target for the model\n",
-    "features = ['sex', 'age', 'famsize', 'Medu', 'Fedu', 'Mjob', 'Fjob']\n",
-    "target = 'G3'\n",
-    "\n",
-    "# Preparing the data\n",
-    "X = student_data[features]\n",
-    "y = student_data[target]\n",
-    "\n",
-    "# One-hot encoding categorical variables\n",
-    "categorical_features = ['sex', 'famsize', 'Mjob', 'Fjob']\n",
-    "one_hot_encoder = OneHotEncoder(handle_unknown='ignore')\n",
-    "\n",
-    "# Setting up the column transformer with OneHotEncoder\n",
-    "preprocessor = ColumnTransformer(\n",
-    "    transformers=[\n",
-    "        ('cat', one_hot_encoder, categorical_features)],\n",
-    "    remainder='passthrough')\n",
-    "\n",
-    "# Creating a pipeline that first transforms data then fits a Random Forest model\n",
-    "rf_model_pipeline = Pipeline(steps=[\n",
-    "    ('preprocessor', preprocessor),\n",
-    "    ('regressor', RandomForestRegressor(n_estimators=100, random_state=0))\n",
-    "])\n",
-    "\n",
-    "# Splitting data into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
-    "\n",
-    "# Fitting the Random Forest model\n",
-    "rf_model_pipeline.fit(X_train, y_train)\n",
-    "\n",
-    "# Predicting test set results with the Random Forest model\n",
-    "y_rf_pred = rf_model_pipeline.predict(X_test)\n",
-    "\n",
-    "# Evaluating the Random Forest model\n",
-    "rf_mse = mean_squared_error(y_test, y_rf_pred)\n",
-    "rf_rmse = np.sqrt(rf_mse)\n",
-    "rf_r2 = r2_score(y_test, y_rf_pred)\n",
-    "\n",
-    "# Output the performance metrics\n",
-    "print(\"Root Mean Squared Error: \", rf_rmse)\n",
-    "print(\"R-squared: \", rf_r2)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/model_selection/_validation.py:540: FitFailedWarning: \n",
-      "15 fits failed out of a total of 45.\n",
-      "The score on these train-test partitions for these parameters will be set to nan.\n",
-      "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
-      "\n",
-      "Below are more details about the failures:\n",
-      "--------------------------------------------------------------------------------\n",
-      "15 fits failed with the following error:\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/model_selection/_validation.py\", line 888, in _fit_and_score\n",
-      "    estimator.fit(X_train, y_train, **fit_params)\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py\", line 1473, in wrapper\n",
-      "    return fit_method(estimator, *args, **kwargs)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/pipeline.py\", line 473, in fit\n",
-      "    self._final_estimator.fit(Xt, y, **last_step_params[\"fit\"])\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py\", line 1466, in wrapper\n",
-      "    estimator._validate_params()\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py\", line 666, in _validate_params\n",
-      "    validate_parameter_constraints(\n",
-      "  File \"/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/utils/_param_validation.py\", line 95, in validate_parameter_constraints\n",
-      "    raise InvalidParameterError(\n",
-      "sklearn.utils._param_validation.InvalidParameterError: The 'max_features' parameter of RandomForestRegressor must be an int in the range [1, inf), a float in the range (0.0, 1.0], a str among {'sqrt', 'log2'} or None. Got 'auto' instead.\n",
-      "\n",
-      "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/model_selection/_search.py:1103: UserWarning: One or more of the test scores are non-finite: [        nan         nan         nan -0.17508094 -0.15850638 -0.14952317\n",
-      " -0.17508094 -0.15850638 -0.14952317]\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>model</th>\n",
-       "      <th>best_score</th>\n",
-       "      <th>best_params</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>RandomForestRegressor</td>\n",
-       "      <td>-0.149523</td>\n",
-       "      <td>{'regressor__max_features': 'sqrt', 'regressor...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>GradientBoostingRegressor</td>\n",
-       "      <td>0.016423</td>\n",
-       "      <td>{'regressor__learning_rate': 0.01, 'regressor_...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ridge</td>\n",
-       "      <td>0.053240</td>\n",
-       "      <td>{'regressor__alpha': 100}</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       model  best_score  \\\n",
-       "0      RandomForestRegressor   -0.149523   \n",
-       "1  GradientBoostingRegressor    0.016423   \n",
-       "2                      Ridge    0.053240   \n",
-       "\n",
-       "                                         best_params  \n",
-       "0  {'regressor__max_features': 'sqrt', 'regressor...  \n",
-       "1  {'regressor__learning_rate': 0.01, 'regressor_...  \n",
-       "2                          {'regressor__alpha': 100}  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.ensemble import GradientBoostingRegressor\n",
-    "from sklearn.linear_model import Ridge\n",
-    "\n",
-    "# Define the models and parameters to be tested\n",
-    "model_params = {\n",
-    "    'RandomForestRegressor': {\n",
-    "        'model': RandomForestRegressor(random_state=0),\n",
-    "        'params': {\n",
-    "            'regressor__n_estimators': [50, 100, 200],\n",
-    "            'regressor__max_features': ['auto', 'sqrt', 'log2']\n",
-    "        }\n",
-    "    },\n",
-    "    'GradientBoostingRegressor': {\n",
-    "        'model': GradientBoostingRegressor(random_state=0),\n",
-    "        'params': {\n",
-    "            'regressor__n_estimators': [50, 100, 200],\n",
-    "            'regressor__learning_rate': [0.01, 0.1, 0.2],\n",
-    "            'regressor__max_depth': [3, 5, 7]\n",
-    "        }\n",
-    "    },\n",
-    "    'Ridge': {\n",
-    "        'model': Ridge(),\n",
-    "        'params': {\n",
-    "            'regressor__alpha': [1, 10, 100, 1000]\n",
-    "        }\n",
-    "    }\n",
-    "}\n",
-    "\n",
-    "# List to store results\n",
-    "results = []\n",
-    "\n",
-    "# Loop through each model/parameters combination and perform Grid Search\n",
-    "for model_name, mp in model_params.items():\n",
-    "    # Setup the pipeline\n",
-    "    pipe = Pipeline([\n",
-    "        ('preprocessor', preprocessor),\n",
-    "        ('regressor', mp['model'])\n",
-    "    ])\n",
-    "    clf = GridSearchCV(pipe, mp['params'], cv=5, return_train_score=False)\n",
-    "    clf.fit(X_train, y_train)\n",
-    "    results.append({\n",
-    "        'model': model_name,\n",
-    "        'best_score': clf.best_score_,\n",
-    "        'best_params': clf.best_params_\n",
-    "    })\n",
-    "\n",
-    "# Convert results to DataFrame for better visualization\n",
-    "results_df = pd.DataFrame(results)\n",
-    "results_df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## New Dataset"
+    "## New Dataset\n",
+    "Using aggregated data set from Kaggle:\n",
+    "https://www.kaggle.com/datasets/spscientist/students-performance-in-exams\n"
    ]
   },
   {
@@ -463,7 +203,7 @@
     }
    ],
    "source": [
-    "score_data_path = \"student_score.csv\"\n",
+    "score_data_path = \"datasets/student_score.csv\"\n",
     "df = pd.read_csv(score_data_path)\n",
     "\n",
     "# Display the first few rows of the dataset and the column names to understand its structure\n",
