--- a/learning_pace.ipynb
+++ b/learning_pace.ipynb
@@ -30,22 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   StudentID  Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly   \n",
-      "0       1001   17       1          0                  2        19.833723  \\\n",
+      "   StudentID  Age  Gender  Ethnicity  ParentalEducation  StudyTimeWeekly  \\\n",
+      "0       1001   17       1          0                  2        19.833723   \n",
       "1       1002   18       0          0                  1        15.408756   \n",
       "2       1003   15       0          2                  3         4.210570   \n",
       "3       1004   17       1          0                  3        10.028829   \n",
       "4       1005   17       1          0                  2         4.672495   \n",
       "\n",
-      "   Absences  Tutoring  ParentalSupport  Extracurricular  Sports  Music   \n",
-      "0         7         1                2                0       0      1  \\\n",
+      "   Absences  Tutoring  ParentalSupport  Extracurricular  Sports  Music  \\\n",
+      "0         7         1                2                0       0      1   \n",
       "1         0         0                1                0       0      0   \n",
       "2        26         0                2                0       0      0   \n",
       "3        14         0                3                1       0      0   \n",
@@ -56,73 +56,7 @@
       "1             0  3.042915         1.0  \n",
       "2             0  0.112602         4.0  \n",
       "3             0  2.054218         3.0  \n",
-      "4             0  1.288061         4.0  \n",
-      "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...   \n",
-      "0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...  \\\n",
-      "1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n",
-      "2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n",
-      "3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n",
-      "4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n",
-      "\n",
-      "  famrel freetime  goout  Dalc  Walc health absences  G1  G2  G3  \n",
-      "0      4        3      4     1     1      3        6   5   6   6  \n",
-      "1      5        3      3     1     1      3        4   5   5   6  \n",
-      "2      4        3      2     2     3      3       10   7   8  10  \n",
-      "3      3        2      2     1     1      5        2  15  14  15  \n",
-      "4      4        3      2     1     2      5        4   6  10  10  \n",
-      "\n",
-      "[5 rows x 33 columns]\n",
-      "  school sex  age address famsize Pstatus  Medu  Fedu     Mjob      Fjob  ...   \n",
-      "0     GP   F   18       U     GT3       A     4     4  at_home   teacher  ...  \\\n",
-      "1     GP   F   17       U     GT3       T     1     1  at_home     other  ...   \n",
-      "2     GP   F   15       U     LE3       T     1     1  at_home     other  ...   \n",
-      "3     GP   F   15       U     GT3       T     4     2   health  services  ...   \n",
-      "4     GP   F   16       U     GT3       T     3     3    other     other  ...   \n",
-      "\n",
-      "  famrel freetime  goout  Dalc  Walc health absences  G1  G2  G3  \n",
-      "0      4        3      4     1     1      3        4   0  11  11  \n",
-      "1      5        3      3     1     1      3        2   9  11  11  \n",
-      "2      4        3      2     2     3      3        6  12  13  12  \n",
-      "3      3        2      2     1     1      5        0  14  14  14  \n",
-      "4      4        3      2     1     2      5        0  11  13  13  \n",
-      "\n",
-      "[5 rows x 33 columns]\n",
-      "  Student ID  Study Hours per Week  Attendance Rate  Previous Grades   \n",
-      "0     S00001                  12.5              NaN             75.0  \\\n",
-      "1     S00002                   9.3             95.3             60.6   \n",
-      "2     S00003                  13.2              NaN             64.0   \n",
-      "3     S00004                  17.6             76.8             62.4   \n",
-      "4     S00005                   8.8             89.3             72.7   \n",
-      "\n",
-      "  Participation in Extracurricular Activities Parent Education Level Passed  \n",
-      "0                                         Yes                 Master    Yes  \n",
-      "1                                          No            High School     No  \n",
-      "2                                          No              Associate     No  \n",
-      "3                                         Yes               Bachelor     No  \n",
-      "4                                          No                 Master     No  \n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2392 entries, 0 to 2391\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   StudentID          2392 non-null   int64  \n",
-      " 1   Age                2392 non-null   int64  \n",
-      " 2   Gender             2392 non-null   int64  \n",
-      " 3   Ethnicity          2392 non-null   int64  \n",
-      " 4   ParentalEducation  2392 non-null   int64  \n",
-      " 5   StudyTimeWeekly    2392 non-null   float64\n",
-      " 6   Absences           2392 non-null   int64  \n",
-      " 7   Tutoring           2392 non-null   int64  \n",
-      " 8   ParentalSupport    2392 non-null   int64  \n",
-      " 9   Extracurricular    2392 non-null   int64  \n",
-      " 10  Sports             2392 non-null   int64  \n",
-      " 11  Music              2392 non-null   int64  \n",
-      " 12  Volunteering       2392 non-null   int64  \n",
-      " 13  GPA                2392 non-null   float64\n",
-      " 14  GradeClass         2392 non-null   float64\n",
-      "dtypes: float64(3), int64(12)\n",
-      "memory usage: 280.4 KB\n",
-      "None\n"
+      "4             0  1.288061         4.0  \n"
      ]
     }
    ],
@@ -141,16 +75,16 @@
     "from imblearn.over_sampling import SMOTE\n",
     "\n",
     "\n",
-    "data1 = pd.read_csv('datasets\\Student_performance_data _.csv')\n",
-    "data2 = pd.read_csv('datasets\\student-mat.csv', delimiter=';', skipinitialspace=True)\n",
-    "data3 = pd.read_csv('datasets\\student-por.csv', delimiter=';', skipinitialspace=True)\n",
-    "data4 = pd.read_csv('datasets\\student_performance_prediction.csv')\n",
+    "data1 = pd.read_csv('datasets/Student_performance_data _.csv')\n",
+    "# data2 = pd.read_csv('datasets\\student-mat.csv', delimiter=';', skipinitialspace=True)\n",
+    "# data3 = pd.read_csv('datasets\\student-por.csv', delimiter=';', skipinitialspace=True)\n",
+    "# data4 = pd.read_csv('datasets\\student_performance_prediction.csv')\n",
     "\n",
     "print(data1.head())\n",
-    "print(data2.head())\n",
-    "print(data3.head())\n",
-    "print(data4.head())\n",
-    "print(data1.info())"
+    "# print(data2.head())\n",
+    "# print(data3.head())\n",
+    "# print(data4.head())\n",
+    "# print(data1.info())"
    ]
   },
   {
@@ -160,9 +94,9 @@
    "outputs": [],
    "source": [
     "data1 = data1.dropna()\n",
-    "data2 = data2.dropna()\n",
-    "data3 = data3.dropna()\n",
-    "data4 = data4.dropna()"
+    "# data2 = data2.dropna()\n",
+    "# data3 = data3.dropna()\n",
+    "# data4 = data4.dropna()"
    ]
   },
   {
@@ -1850,7 +1784,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
