--- a/combined_generative/combined_model.ipynb
+++ b/combined_generative/combined_model.ipynb
@@ -35,192 +35,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Annie's Model"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# with open(\"models_and_preprocessor/learning_pace.pkl\", \"rb\") as file:\n",
-    "#     model = pickle.load(file)\n",
-    "\n",
-    "# def preprocess_data_for_pace(student_data):\n",
-    "#     encoded_data = {\n",
-    "#         'Age': student_data['Age'],\n",
-    "#         'Gender': 0 if student_data['Gender'] == 'Male' else 1,  # Example: Male=0, Female=1\n",
-    "#         'ParentalEducation': {\n",
-    "#             'HighSchool': 0, 'SomeCollege': 1, 'AssociateDegree': 2, 'Bachelor': 3, 'Master': 4\n",
-    "#         }.get(student_data['ParentalEducation'], 0),  # Default to 0 if not found\n",
-    "#         'Absences': student_data['Absences'],\n",
-    "#         'Tutoring': 1 if student_data['Tutoring'] == 'Yes' else 0,\n",
-    "#         'ParentalSupport': 1 if student_data['ParentalSupport'] == 'Yes' else 0,\n",
-    "#         'Extracurricular': 1 if student_data['Extracurricular'] == 'Yes' else 0,\n",
-    "#         'GPA': student_data['GPA']\n",
-    "#     }\n",
-    "#     return encoded_data\n",
-    "\n",
-    "# def predict_learning_pace(model, student_data):\n",
-    "#     preprocessed_data = preprocess_data_for_pace(student_data)\n",
-    "#     student_df = pd.DataFrame([preprocessed_data])\n",
-    "#     prediction = model.predict(student_df)[0]  # 0 for slow, 1 for fast\n",
-    "#     print(\"fast learner\" if prediction == 1 else \"slow learner\")\n",
-    "#     return \"fast learner\" if prediction == 1 else \"slow learner\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Elaine's Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the pre-trained model and preprocessor\n",
-    "# model = load_model('models_and_preprocessor/average_score_model.h5', compile=False)\n",
-    "# model.compile(optimizer='adam', loss='mse')\n",
-    "\n",
-    "# preprocessor = joblib.load('models_and_preprocessor/preprocessor.pkl')\n",
-    "\n",
-    "# Processing user inputs\n",
-    "# def predict_average_score(preprocessed_input):\n",
-    "#     \"\"\"\n",
-    "#     Predict the average score based on the preprocessed input.\n",
-    "\n",
-    "#     Args:\n",
-    "#     preprocessed_input (numpy.array): The preprocessed input ready for model prediction.\n",
-    "\n",
-    "#     Returns:\n",
-    "#     float: The predicted average score.\n",
-    "#     \"\"\"\n",
-    "#     # The model expects a 2D array for input, ensure preprocessed_input is correctly shaped\n",
-    "#     prediction = model.predict(preprocessed_input)\n",
-    "#     return prediction[0][0]  # Extracting the score from the prediction result\n",
-    "\n",
-    "# def preprocess_data_for_score(user_attributes):\n",
-    "#     \"\"\"\n",
-    "#     Transform raw user input to be suitable for model prediction.\n",
-    "    \n",
-    "#     Args:\n",
-    "#     user_attributes (dict): A dictionary containing user attributes with keys matching model feature names.\n",
-    "\n",
-    "#     Returns:\n",
-    "#     numpy.array: The preprocessed data ready for model prediction.\n",
-    "#     \"\"\"\n",
-    "#     # Convert the user attributes dictionary into a DataFrame\n",
-    "#     user_df = pd.DataFrame([user_attributes])  # Wrapping in a list to handle single-row creation\n",
-    "\n",
-    "#     # Use the preprocessor to transform the data\n",
-    "#     user_input_transformed = preprocessor.transform(user_df)\n",
-    "    \n",
-    "#     return user_input_transformed\n",
-    "\n",
-    "# def generate_result(user_input):\n",
-    "#     # Prepare the input for prediction\n",
-    "#     preprocessed_input = preprocess_data_for_score(user_input)\n",
-    "    \n",
-    "#     # Get the predicted average score from the model\n",
-    "#     predicted_score = predict_average_score(preprocessed_input)\n",
-    "\n",
-    "#     MESSAGES = [\n",
-    "#         {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
-    "#         {\"role\": \"user\", \"content\": f\"I need help creating a study plan. Based on my habits, my predicted average score is around {predicted_score}. I want to improve this score.\"},\n",
-    "#         {\n",
-    "#             \"role\": \"assistant\",\n",
-    "#             \"content\": \"Sure, I'd be happy to help! What subjects or topics do you need to include in your study plan?\",\n",
-    "#         },\n",
-    "#         {\"role\": \"user\", \"content\": \"The plan should cover mathematics over the next month.\"},\n",
-    "#         {\n",
-    "#             \"role\": \"assistant\",\n",
-    "#             \"content\": \"Do you have any specific goals or exams for these subjects during this period?\",\n",
-    "#         },\n",
-    "#         {\"role\": \"user\", \"content\": \"Yes, I'm preparing for midterms and need to cover calculus in mathematics.\"}\n",
-    "#     ]\n",
-    "\n",
-    "\n",
-    "\n",
-    "#     completion = client.chat.completions.create(\n",
-    "#         model=MODEL_NAME,\n",
-    "#         # prompt=start_prompt,\n",
-    "#         messages=MESSAGES\n",
-    "#     )\n",
-    "\n",
-    "#     response_content = completion.choices[0].message.content\n",
-    "#     return response_content\n",
-    "\n",
-    "# # Example usage:\n",
-    "# user_attributes = {\n",
-    "#     'Gender': 'Male',\n",
-    "#     'EthnicGroup': 'Group B',\n",
-    "#     'ParentEduc': \"Bachelor's degree\",\n",
-    "#     'LunchType': 'Standard',\n",
-    "#     'TestPrep': 'None',\n",
-    "#     'ParentMaritalStatus': 'Married',\n",
-    "#     'PracticeSport': 'Yes',\n",
-    "#     'IsFirstChild': 'No',\n",
-    "#     'WklyStudyHours': '10',\n",
-    "#     'MathScore': 88, \n",
-    "#     'ReadingScore': 90,\n",
-    "#     'WritingScore': 87\n",
-    "# }\n",
-    "\n",
-    "# output = generate_result(user_attributes)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Rosie's Model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model = joblib.load('models_and_preprocessor/logistic_model.pkl')\n",
-    "# label_encoders = joblib.load('models_and_preprocessor/label_encoders.pkl')\n",
-    "\n",
-    "# def preprocess_data_for_level(student_data, label_encoders):\n",
-    "#     encoded_data = {}\n",
-    "#     for feature, value in student_data.items():\n",
-    "#         if feature in label_encoders:\n",
-    "#             le = label_encoders[feature]\n",
-    "#             if value in le.classes_:\n",
-    "#                 encoded_data[feature] = le.transform([value])[0]\n",
-    "#             else:\n",
-    "#                 print(f\"Warning: Unseen label '{value}' in feature '{feature}'. Skipping this feature.\")\n",
-    "#                 return None\n",
-    "#         else:\n",
-    "#             encoded_data[feature] = value  # feature keeps the same\n",
-    "#     return pd.DataFrame([encoded_data])\n",
-    "\n",
-    "\n",
-    "# # generate prediction result\n",
-    "# def predict_student_level(user_input, model, label_encoders):\n",
-    "#     preprocessed_data = preprocess_data_for_level(user_input, label_encoders)\n",
-    "#     if preprocessed_data is not None:\n",
-    "#         prediction = model.predict(preprocessed_data)[0]\n",
-    "#         return \"above avg\" if prediction == 1 else \"below avg\"\n",
-    "#     else:\n",
-    "#         return \"Unable to generate prediction due to unseen labels.\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +137,7 @@
        "int"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -332,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -340,59 +156,73 @@
      "output_type": "stream",
      "text": [
       "fast learner\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step\n",
-      "Great! We'll develop a study plan based on your fast learning pace and the need to cover calculus in mathematics over the next week. This plan will involve studying for 4 or more hours per day, given your ability to multitask and learn quickly.\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 82ms/step\n",
+      "Great! Let's create a structured study plan for your calculus midterms over the next week. Based on your status as a fast learner capable of multitasking and studying more than 4 hours per day, I'll structure your study plan accordingly.\n",
       "\n",
       "### 7-Day Study Plan for Calculus Midterms\n",
       "\n",
-      "#### Day 1: Fundamental Concepts\n",
-      "- **1 Hour**: Review limits and continuity. Make sure you understand the epsilon-delta definition.\n",
-      "- **1 Hour**: Study derivatives: basic rules, product rule, quotient rule, and chain rule.\n",
-      "- **1 Hour**: Practice problems from your textbook or online resources.\n",
-      "- **1 Hour**: Review and summarize key concepts from today's study session.\n",
+      "#### Day 1: Functions and Limits\n",
+      "- **9:00 AM - 11:00 AM:** Review lecture notes and textbook chapters on Functions.\n",
+      "- **11:15 AM - 1:15 PM:** Practice problems on Functions.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Review lecture notes and textbook chapters on Limits.\n",
+      "- **4:30 PM - 6:30 PM:** Practice problems on Limits.\n",
+      "- **8:00 PM - 9:00 PM:** Review key concepts and make summary notes.\n",
       "\n",
-      "#### Day 2: Applications of Derivatives\n",
-      "- **1 Hour**: Study applications of derivatives: motion problems, related rates, and optimization problems.\n",
-      "- **1 Hour**: Practice problems on related rates and optimization.\n",
-      "- **1 Hour**: Review critical points and the First and Second Derivative Tests.\n",
-      "- **1 Hour**: Practice identifying and solving maximum and minimum problems.\n",
+      "#### Day 2: Continuity and Derivatives\n",
+      "- **9:00 AM - 11:00 AM:** Study continuity from textbook and notes.\n",
+      "- **11:15 AM - 1:15 PM:** Practice problems on Continuity.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Review derivatives (rules, properties) from textbook and notes.\n",
+      "- **4:30 PM - 6:30 PM:** Practice derivative problems.\n",
+      "- **8:00 PM - 9:00 PM:** Create summary notes and flashcards on derivatives.\n",
       "\n",
-      "#### Day 3: Integrals\n",
-      "- **1 Hour**: Review definite and indefinite integrals.\n",
-      "- **1 Hour**: Study the Fundamental Theorem of Calculus.\n",
-      "- **1 Hour**: Practice problems on basic integration techniques.\n",
-      "- **1 Hour**: Start learning about substitution methods in integration.\n",
+      "#### Day 3: Advanced Derivatives\n",
+      "- **9:00 AM - 11:00 AM:** Study higher-order derivatives (second derivative, etc.) and implicit differentiation.\n",
+      "- **11:15 AM - 1:15 PM:** Practice problems on advanced derivatives.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Study derivative applications: maxima, minima, and inflection points.\n",
+      "- **4:30 PM - 6:30 PM:** Practice application problems.\n",
+      "- **8:00 PM - 9:00 PM:** Review and summarize key concepts.\n",
       "\n",
-      "#### Day 4: Techniques of Integration\n",
-      "- **1 Hour**: Study integration by parts and partial fraction decomposition.\n",
-      "- **1 Hour**: Practice problems on integration by parts.\n",
-      "- **1 Hour**: Practice problems on partial fraction decomposition.\n",
-      "- **1 Hour**: Review and summarize the techniques of integration you studied today.\n",
+      "#### Day 4: Integrals\n",
+      "- **9:00 AM - 11:00 AM:** Study indefinite integrals and anti-differentiation.\n",
+      "- **11:15 AM - 1:15 PM:** Practice problems on indefinite integrals.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Study definite integrals and the Fundamental Theorem of Calculus.\n",
+      "- **4:30 PM - 6:30 PM:** Practice problems on definite integrals.\n",
+      "- **8:00 PM - 9:00 PM:** Review overall integration techniques.\n",
       "\n",
-      "#### Day 5: Applications of Integrals\n",
-      "- **1 Hour**: Study applications of integrals: area under curves and volume of solids of revolution.\n",
-      "- **1 Hour**: Practice calculating areas under curves.\n",
-      "- **1 Hour**: Practice calculating volumes of solids of revolution using the disk and washer methods.\n",
-      "- **1 Hour**: Review and summarize key concepts from today's study session involving integrals.\n",
+      "#### Day 5: Techniques of Integration\n",
+      "- **9:00 AM - 11:00 AM:** Study integration techniques: u-substitution, integration by parts.\n",
+      "- **11:15 AM - 1:15 PM:** Practice problems using u-substitution.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Practice problems using integration by parts.\n",
+      "- **4:30 PM - 6:30 PM:** Review lecture notes and practice additional problems.\n",
+      "- **8:00 PM - 9:00 PM:** Summary notes and flashcards on techniques.\n",
       "\n",
-      "#### Day 6: Differential Equations and Series\n",
-      "- **1 Hour**: Understand basic differential equations and their solutions.\n",
-      "- **1 Hour**: Practice solving first-order differential equations.\n",
-      "- **1 Hour**: Study sequences and series, focusing on convergence tests.\n",
-      "- **1 Hour**: Practice problems involving sequences and series convergence.\n",
+      "#### Day 6: Practice and Review\n",
+      "- **9:00 AM - 11:00 AM:** Comprehensive problem-solving session (mixed topics).\n",
+      "- **11:15 AM - 1:15 PM:** Timed practice test covering all topics studied.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Review and correct mistakes from the practice test.\n",
+      "- **4:30 PM - 6:30 PM:** Summarize and consolidate weaker areas.\n",
+      "- **8:00 PM - 9:00 PM:** Relax and lightly review key concepts.\n",
       "\n",
-      "#### Day 7: Review and Practice Exams\n",
-      "- **2 Hours**: Do a comprehensive review of all topics covered during the week.\n",
-      "- **1 Hour**: Take a timed practice exam to simulate midterm conditions.\n",
-      "- **1 Hour**: Go through the practice exam results, identify weak areas, and review those topics thoroughly.\n",
+      "#### Day 7: Final Review and Relaxation\n",
+      "- **9:00 AM - 11:00 AM:** Go over summary notes, flashcards, and key formulae.\n",
+      "- **11:15 AM - 1:15 PM:** Light practice problems to keep concepts fresh.\n",
+      "- **1:15 PM - 2:15 PM:** Lunch/Break\n",
+      "- **2:15 PM - 4:15 PM:** Calm review session; meditate on key problems and their solutions.\n",
+      "- **4:30 PM - 6:30 PM:** Visualize the test scenario and mentally rehearse.\n",
+      "- **8:00 PM - 9:00 PM:** Relax, get plenty of rest, and ensure good sleep before the exam.\n",
       "\n",
-      "### Additional Tips:\n",
-      "- **Stay Organized:** Keep a dedicated notebook or digital document for summarizing key points and formulas.\n",
-      "- **Active Learning:** Engage in active problem-solving rather than passive reading.\n",
-      "- **Regular Breaks:** Take short breaks between study sessions to stay fresh and focused.\n",
-      "- **Healthy Routine:** Ensure sufficient sleep, hydration, and nutrition to optimize learning efficiency.\n",
+      "### Tips:\n",
+      "1. **Breaks**: Ensure to take short breaks during your study sessions to avoid burnout.\n",
+      "2. **Healthy Eating**: Maintain a balanced diet to keep your brain functioning at its best.\n",
+      "3. **Sleep**: Aim for at least 7-8 hours of sleep each night.\n",
       "\n",
-      "Feel free to adjust the plan according to your comfort and progress. Good luck with your midterms!\n"
+      "Good luck with your studies, and I hope you do great on your midterms!\n"
      ]
     }
    ],
@@ -427,8 +257,8 @@
     "def preprocess_data_for_score(user_input):\n",
     "    relevant_data = {\n",
     "        'Gender': 'Male' if user_input['sex'] == 'M' else 'Female',\n",
-    "        'EthnicGroup': user_input['ParentalEducation'],\n",
-    "        'ParentEduc': user_input['ParentEduc'],\n",
+    "        'EthnicGroup': user_input['EthnicGroup'],\n",
+    "        'ParentEduc': user_input['ParentalEducation'],\n",
     "        'LunchType': user_input['LunchType'],\n",
     "        'TestPrep': user_input['TestPrep'],\n",
     "        'ParentMaritalStatus': user_input['ParentMaritalStatus'],\n",
