--- a/combined_generative/elaine_model.ipynb
+++ b/combined_generative/elaine_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,20 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load the pre-trained model and preprocessor\n",
-    "model = load_model('average_score_model.h5', compile=False)\n",
+    "model = load_model('models_and_preprocessor/average_score_model.h5', compile=False)\n",
     "model.compile(optimizer='adam', loss='mse')\n",
     "\n",
-    "preprocessor = joblib.load('preprocessor.pkl')"
+    "preprocessor = joblib.load('models_and_preprocessor/preprocessor.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 14ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 9ms/step\n"
      ]
     }
    ],
@@ -162,141 +162,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Great, let's break down the study plan into weekly goals and daily tasks to ensure comprehensive coverage of the calculus material. Here's a sample one-month study plan:\n",
+      "Great, let's create a focused study plan for calculus over the next month. Here’s a suggested plan that spreads the material evenly, allows time for review, and includes days for practice tests and rest.\n",
       "\n",
-      "### Week 1: Review Fundamentals\n",
-      "**Goal:** Ensure a strong foundation in basic calculus concepts.\n",
+      "### Week 1:\n",
+      "**Day 1 – Review Basics:**\n",
+      "- Limits and continuity.\n",
+      "- Basic differentiation rules.\n",
       "\n",
-      "**Day 1:**\n",
-      "- Review limits and continuity\n",
-      "- Practice problems on limits (30 minutes)\n",
+      "**Day 2 – Further Differentiation:**\n",
+      "- Product, quotient, and chain rules.\n",
       "\n",
-      "**Day 2:**\n",
-      "- Study the concept of derivatives\n",
-      "- Practice problems on finding derivatives (30 minutes)\n",
+      "**Day 3 – Applications of Derivatives:**\n",
+      "- Critical points.\n",
+      "- Local extrema and optimization problems.\n",
       "\n",
-      "**Day 3:**\n",
-      "- Review differentiation techniques (product rule, quotient rule, chain rule)\n",
-      "- Practice problems using different techniques (30 minutes)\n",
+      "**Day 4 – Curve Sketching:**\n",
+      "- Concavity and the second derivative test.\n",
+      "- Sketching graphs using first and second derivatives.\n",
       "\n",
-      "**Day 4:**\n",
-      "- Study applications of derivatives (tangent lines, rates of change, etc.)\n",
-      "- Practice application problems (30 minutes)\n",
+      "**Day 5 – Practice:**\n",
+      "- Work on practice problems from topics covered during the week.\n",
+      "- Identify weak areas for further study.\n",
       "\n",
-      "**Day 5:**\n",
-      "- Review critical points and the first derivative test\n",
-      "- Practice problems on finding and classifying critical points (30 minutes)\n",
+      "**Day 6 – Review and Rest:**\n",
+      "- Brief review of the week’s material.\n",
+      "- Rest or light study.\n",
       "\n",
-      "**Day 6:**\n",
-      "- Study the second derivative test and concavity\n",
-      "- Practice problems on concavity and inflection points (30 minutes)\n",
+      "**Day 7 – Practice Test:**\n",
+      "- Take a practice test and time yourself.\n",
+      "- Review the test to see where mistakes were made.\n",
       "\n",
-      "**Day 7:**\n",
-      "- Rest day or light review of the week's material\n",
+      "### Week 2:\n",
+      "**Day 8 – Integration Basics:**\n",
+      "- Definite and indefinite integrals.\n",
+      "- Basic integration techniques.\n",
       "\n",
-      "### Week 2: Integrals\n",
-      "**Goal:** Master the basics of integration and its applications.\n",
+      "**Day 9 – Techniques of Integration:**\n",
+      "- Integration by substitution.\n",
+      "- Integration by parts.\n",
       "\n",
-      "**Day 1:**\n",
-      "- Review the concept of integrals and antiderivatives\n",
-      "- Practice basic integration problems (30 minutes)\n",
+      "**Day 10 – Applications of Integration:**\n",
+      "- Area under curves.\n",
+      "- Volume of solids of revolution.\n",
       "\n",
-      "**Day 2:**\n",
-      "- Study definite integrals and the Fundamental Theorem of Calculus\n",
-      "- Practice problems on finding definite integrals (30 minutes)\n",
+      "**Day 11 – More Applications:**\n",
+      "- Average value of functions.\n",
+      "- Work and applications in physics.\n",
       "\n",
-      "**Day 3:**\n",
-      "- Review integration technique (u-substitution)\n",
-      "- Practice problems using u-substitution (30 minutes)\n",
+      "**Day 12 – Practice:**\n",
+      "- Solve problems on integration and its applications.\n",
+      "- Identify and focus on weak spots.\n",
       "\n",
-      "**Day 4:**\n",
-      "- Study applications of integrals (area under a curve, average value, etc.)\n",
-      "- Practice application problems (30 minutes)\n",
+      "**Day 13 – Review and Rest:**\n",
+      "- Brief review of this week’s material.\n",
+      "- Rest or light study.\n",
       "\n",
-      "**Day 5:**\n",
-      "- Review integration by parts\n",
-      "- Practice problems using integration by parts (30 minutes)\n",
+      "**Day 14 – Practice Test:**\n",
+      "- Take another practice test focusing on both differentiation and integration.\n",
+      "- Review and analyze your mistakes.\n",
       "\n",
-      "**Day 6:**\n",
-      "- Study improper integrals\n",
-      "- Practice problems on improper integrals (30 minutes)\n",
+      "### Week 3:\n",
+      "**Day 15 – Differential Equations:**\n",
+      "- Introduction to differential equations.\n",
+      "- Solving basic first-order ODEs.\n",
       "\n",
-      "**Day 7:**\n",
-      "- Rest day or light review of the week's material\n",
+      "**Day 16 – More Differential Equations:**\n",
+      "- Second-order ODEs.\n",
+      "- Applications of differential equations.\n",
       "\n",
-      "### Week 3: Advanced Topics\n",
-      "**Goal:** Understand more advanced concepts and applications.\n",
+      "**Day 17 – Sequences and Series:**\n",
+      "- Basics of sequences and series.\n",
+      "- Tests for convergence.\n",
       "\n",
-      "**Day 1:**\n",
-      "- Study sequences and series \n",
-      "- Practice problems on sequences (30 minutes)\n",
+      "**Day 18 – Power Series:**\n",
+      "- Taylor and Maclaurin series.\n",
+      "- Convergence of power series.\n",
       "\n",
-      "**Day 2:**\n",
-      "- Review convergence and divergence of series\n",
-      "- Practice problems on series convergence (30 minutes)\n",
+      "**Day 19 – Practice:**\n",
+      "- Problems focusing on differential equations and series.\n",
+      "- Identify areas that need more attention.\n",
       "\n",
-      "**Day 3:**\n",
-      "- Study Taylor and Maclaurin series\n",
-      "- Practice problems on Taylor and Maclaurin series (30 minutes)\n",
+      "**Day 20 – Review and Rest:**\n",
+      "- Brief review of the week’s material.\n",
+      "- Rest or light study.\n",
       "\n",
-      "**Day 4:**\n",
-      "- Review parametric equations\n",
-      "- Practice problems on parametric equations (30 minutes)\n",
+      "**Day 21 – Practice Test:**\n",
+      "- Full-length practice test covering all topics studied so far.\n",
+      "- Detailed review of errors.\n",
       "\n",
-      "**Day 5:**\n",
-      "- Study polar coordinates\n",
-      "- Practice problems on polar coordinates (30 minutes)\n",
+      "### Week 4:\n",
+      "**Day 22 – Multivariable Calculus:**\n",
+      "- Functions of several variables.\n",
+      "- Partial derivatives.\n",
       "\n",
-      "**Day 6:**\n",
-      "- Review partial derivatives\n",
-      "- Practice problems on partial derivatives (30 minutes)\n",
+      "**Day 23 – Multivariable Calculus Continued:**\n",
+      "- Multiple integrals.\n",
+      "- Applications of multiple integrals.\n",
       "\n",
-      "**Day 7:**\n",
-      "- Rest day or light review of the week's material\n",
+      "**Day 24 – Vector Calculus:**\n",
+      "- Vector fields.\n",
+      "- Line and surface integrals.\n",
       "\n",
-      "### Week 4: Comprehensive Review and Practice\n",
-      "**Goal:** Solidify understanding through review and practice exams.\n",
+      "**Day 25 – Theorems:**\n",
+      "- Green's, Stokes’, and the Divergence Theorems.\n",
       "\n",
-      "**Day 1:**\n",
-      "- Review key concepts from Week 1 (limits, derivatives, etc.)\n",
-      "- Practice problems (30 minutes)\n",
+      "**Day 26 – Practice:**\n",
+      "- Solve multivariable calculus and vector calculus problems.\n",
+      "- Focus on areas needing improvement.\n",
       "\n",
-      "**Day 2:**\n",
-      "- Review key concepts from Week 2 (integrals, applications, etc.)\n",
-      "- Practice problems (30 minutes)\n",
+      "**Day 27 – Review and Rest:**\n",
+      "- Comprehensive review of all materials.\n",
+      "- Rest or light review.\n",
       "\n",
-      "**Day 3:**\n",
-      "- Review key concepts from Week 3 (sequences, series, polar coordinates, etc.)\n",
-      "- Practice problems (30 minutes)\n",
+      "**Day 28 – Final Practice Test:**\n",
+      "- Full-length practice test covering all calculus topics.\n",
+      "- Review and make final improvements based on this test.\n",
       "\n",
-      "**Day 4:**\n",
-      "- Take a practice exam focusing on derivatives and integrals (timed, under exam conditions)\n",
+      "### Study Tips:\n",
+      "1. **Consistency:** Study a bit every day rather than cramming.\n",
+      "2. **Focused Practice:** Spend extra time on areas where you struggle.\n",
+      "3. **Active Learning:** Engage with the material actively—make summaries, flashcards, and solve problems without looking at the solutions.\n",
+      "4. **Seek Help:** Don't hesitate to ask for help from teachers, tutors, or study groups.\n",
+      "5. **Healthy Habits:** Ensure you’re getting enough sleep, eating well, and taking breaks to avoid burnout.\n",
       "\n",
-      "**Day 5:**\n",
-      "- Review practice exam mistakes and difficult concepts\n",
-      "- Study those areas in-depth (30 minutes)\n",
-      "\n",
-      "**Day 6:**\n",
-      "- Take a second practice exam focusing on advanced topics (sequences, series, etc.)\n",
-      "\n",
-      "**Day 7:**\n",
-      "- Review practice exam mistakes and difficult concepts\n",
-      "- Final light review session (30 minutes)\n",
-      "\n",
-      "### Tips:\n",
-      "- **Consistency**: Stick to the study plan and try not to skip days.\n",
-      "- **Active Learning**: Practice problems actively rather than passively reading.\n",
-      "- **Seek Help**: Don’t hesitate to ask for help from teachers, tutors, or study groups.\n",
-      "- **Take Breaks**: Short, regular breaks can help improve focus and retention.\n",
-      "\n",
-      "Good luck with your midterms!\n"
+      "With regular, focused study and consistent practice, you'll likely see an improvement in your calculus understanding and your scores. Good luck with your midterms!\n"
      ]
     }
    ],
