--- a/combined_generative/rosie_model.ipynb
+++ b/combined_generative/rosie_model.ipynb
@@ -16,11 +16,24 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LogisticRegression from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "/opt/anaconda3/envs/microsoft_hackthon/lib/python3.12/site-packages/sklearn/base.py:376: InconsistentVersionWarning: Trying to unpickle estimator LabelEncoder from version 1.3.0 when using version 1.5.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "model = joblib.load('logistic_model.pkl')\n",
-    "label_encoders = joblib.load('label_encoders.pkl')"
+    "model = joblib.load('models_and_preprocessor/logistic_model.pkl')\n",
+    "label_encoders = joblib.load('models_and_preprocessor/label_encoders.pkl')"
    ]
   },
   {
@@ -62,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,104 +141,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Great, let's create a detailed study plan for your calculus midterms over the next month. To improve your study efficiency, we'll incorporate strategies such as active learning, regular review sessions, and breaks to keep you fresh.\n",
+      "Got it! To create an effective study plan for calculus over the next month, we'll break it down into manageable sections and incorporate techniques to improve your efficiency. Here’s a suggested plan:\n",
       "\n",
-      "### Week 1: Review and Fundamental Concepts\n",
-      "**Day 1-2: Limits and Continuity**\n",
-      "- Read textbook chapters on limits and continuity.\n",
-      "- Watch online tutorials or lectures.\n",
-      "- Practice basic problems.\n",
+      "### Week 1: Fundamentals and Limits\n",
+      "**Monday:**\n",
+      "- Review Algebra and Functions (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 3-4: Derivatives and Differentiation Rules**\n",
-      "- Review your notes on derivatives.\n",
-      "- Solve derivative problems including power, product, quotient, and chain rules.\n",
-      "- Use flashcards for differentiation formulas.\n",
+      "**Tuesday:**\n",
+      "- Introduction to Limits (2 hours)\n",
+      "- Watch educational videos on Limits (1 hour)\n",
       "\n",
-      "**Day 5: Application of Derivatives**\n",
-      "- Learn about critical points, optimization problems, and related rates.\n",
-      "- Practice problems involving real-life applications of derivatives.\n",
+      "**Wednesday:**\n",
+      "- Continuity and Limits at Infinity (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 6: Review of the Week's Topics**\n",
-      "- Summarize and rewrite key concepts.\n",
-      "- Redo practice problems you found challenging.\n",
-      "- Take a short practice quiz.\n",
+      "**Thursday:**\n",
+      "- One-sided Limits and Infinite Limits (2 hours)\n",
+      "- Quiz yourself using flashcards or online quizzes (1 hour)\n",
       "\n",
-      "**Day 7: Rest and Light Review**\n",
-      "- Take a break from intense studying. Do a light review if needed.\n",
-      "- Refresh your mind with a summary of concepts.\n",
+      "**Friday:**\n",
+      "- Review Week's Material (1.5 hours)\n",
+      "- Take a comprehensive quiz on limits and continuity (1.5 hours)\n",
       "\n",
-      "### Week 2: Integrals and Their Applications\n",
-      "**Day 1-2: Basics of Integrals**\n",
-      "- Read textbook chapters on antiderivatives and definite integrals.\n",
-      "- Watch video tutorials.\n",
-      "- Practice basic integration problems.\n",
+      "### Week 2: Derivatives\n",
+      "**Monday:**\n",
+      "- Introduction to Derivatives (2 hours)\n",
+      "- Basic Differentiation Rules (1 hour)\n",
       "\n",
-      "**Day 3-4: Techniques of Integration**\n",
-      "- Study and practice substitution, integration by parts, and partial fractions.\n",
-      "- Use flashcards for integration techniques.\n",
+      "**Tuesday:**\n",
+      "- Derivatives of Polynomial and Rational Functions (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 5: Applications of Integrals**\n",
-      "- Learn about area under the curve, volume of solids of revolution, and average value of functions.\n",
-      "- Practice application problems.\n",
+      "**Wednesday:**\n",
+      "- Chain Rule and Implicit Differentiation (2 hours)\n",
+      "- Watch educational videos on the Chain Rule (1 hour)\n",
       "\n",
-      "**Day 6: Review of the Week's Topics**\n",
-      "- Summarize and rewrite key concepts.\n",
-      "- Redo challenging problems and take a practice quiz.\n",
+      "**Thursday:**\n",
+      "- Higher-Order Derivatives (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 7: Rest and Light Review**\n",
-      "- Rest from intense studying, review summaries if needed.\n",
+      "**Friday:**\n",
+      "- Review Week's Material (1.5 hours)\n",
+      "- Take a comprehensive quiz on derivatives (1.5 hours)\n",
       "\n",
-      "### Week 3: Advanced Topics and Practice\n",
-      "**Day 1-2: Exponential and Logarithmic Functions**\n",
-      "- Review and practice differentiation and integration of exponential/logarithmic functions.\n",
-      "- Work on applied problems involving these functions.\n",
+      "### Week 3: Applications of Derivatives\n",
+      "**Monday:**\n",
+      "- Applications: Rate of Change (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 3: Differential Equations**\n",
-      "- Introduce basic differential equations and solution methods.\n",
-      "- Practice solving basic differential equations.\n",
+      "**Tuesday:**\n",
+      "- Maxima and Minima (2 hours)\n",
+      "- Graphical Analysis (1 hour)\n",
       "\n",
-      "**Day 4-5: Sequences and Series**\n",
-      "- Study and practice problems involving sequences and series.\n",
-      "- Learn about convergence tests and power series.\n",
+      "**Wednesday:**\n",
+      "- Optimization Problems (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 6: Review of the Week's Topics**\n",
-      "- Rewrite and summarize key concepts.\n",
-      "- Redo challenging problems and take a practice quiz.\n",
+      "**Thursday:**\n",
+      "- Related Rates (2 hours)\n",
+      "- Watch educational videos on Related Rates (1 hour)\n",
       "\n",
-      "**Day 7: Rest and Light Review**\n",
-      "- Take a break from intense studying. Lightly review if necessary.\n",
+      "**Friday:**\n",
+      "- Review Week's Material (1.5 hours)\n",
+      "- Take a comprehensive quiz on applications of derivatives (1.5 hours)\n",
       "\n",
-      "### Week 4: Comprehensive Review and Practice Exams\n",
-      "**Day 1-2: Comprehensive Review of Limits, Derivatives, and Integrals**\n",
-      "- Review notes, textbooks, and previous problems.\n",
-      "- Take a timed practice test covering these topics.\n",
+      "### Week 4: Integrals\n",
+      "**Monday:**\n",
+      "- Introduction to Integration (Definite and Indefinite Integrals) (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 3-4: Comprehensive Review of Applications and Advanced Topics**\n",
-      "- Revisit applications of derivatives, integrals, and advanced topics.\n",
-      "- Take a timed practice test covering these topics.\n",
+      "**Tuesday:**\n",
+      "- Basic Integration Techniques (2 hours)\n",
+      "- Integration by Substitution (1 hour)\n",
       "\n",
-      "**Day 5: Address Weak Areas**\n",
-      "- Identify and focus on any weak areas from the practice tests.\n",
-      "- Practice additional problems and review concepts.\n",
+      "**Wednesday:**\n",
+      "- Area Under Curve and Accumulated Change (2 hours)\n",
+      "- Practice problems (1 hour)\n",
       "\n",
-      "**Day 6-7: Mock Exam and Final Review**\n",
-      "- Take a full-length timed mock exam.\n",
-      "- Review your performance, focus on weak spots, and rest adequately before the actual exam.\n",
+      "**Thursday:**\n",
+      "- Applications of Integrals (2 hours)\n",
+      "- Watch educational videos on Integral Applications (1 hour)\n",
       "\n",
-      "### Study Efficiency Tips\n",
-      "- **Break Down Study Sessions**: Study in 25-30 minute intervals with 5-10 minute breaks in between (Pomodoro Technique).\n",
-      "- **Active Learning**: Engage with the material by solving problems, teaching concepts to someone else, or summarizing notes.\n",
-      "- **Regular Review**: Regularly revisit and review previously learned topics to ensure retention.\n",
-      "- **Healthy Study Habits**: Ensure you get adequate sleep, maintain a balanced diet, and incorporate exercise to keep your mind and body in good shape.\n",
+      "**Friday:**\n",
+      "- Review Week's Material (1.5 hours)\n",
+      "- Take a comprehensive quiz on integrals (1.5 hours)\n",
       "\n",
-      "Feel free to adjust the plan based on your progress and comfort level. Good luck with your midterms!\n"
+      "### General Tips to Improve Efficiency:\n",
+      "1. **Active Learning:**\n",
+      "   - Don’t just passively read or watch videos. Engage actively by solving problems, taking notes, and teaching concepts to someone else.\n",
+      "   \n",
+      "2. **Spaced Repetition:**\n",
+      "   - Review what you've learned regularly rather than cramming the night before. Use tools like Anki or Quizlet to create flashcards for important concepts.\n",
+      "\n",
+      "3. **Pomodoro Technique:**\n",
+      "   - Break study sessions into intervals of 25 minutes of focused study followed by 5-minute breaks. Every four intervals, take a longer break (15-30 minutes).\n",
+      "\n",
+      "4. **Healthy Study Habits:**\n",
+      "   - Ensure you get adequate sleep, nutrition, and exercise. Study in a quiet, organized environment without distractions.\n",
+      "\n",
+      "5. **Assess and Adjust:**\n",
+      "   - Periodically assess your understanding and adjust your plan if a particular topic needs more attention.\n",
+      "\n",
+      "Let me know if you need any further assistance or adjustments!\n"
      ]
     }
    ],
@@ -233,6 +258,13 @@
     "study_plan = generate_study_plan(user_input)\n",
     "print(study_plan)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -251,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
